# Suse_automation

./: .gitignore  README.md  build-osc  build-repository  build-rpmbuild  config.example  r-disabled  repo-server  shared.sh
.git-hooks/: pre-commit  prepare-hooks
PROJECT/: config
conf/qa_conf_huaweidev/: qa_conf_huaweidev.8  qa_conf_huaweidev.changes  qa_conf_huaweidev.spec
conf/qa_conf_unstable/: qa_conf_unstable.8  qa_conf_unstable.changes  qa_conf_unstable.spec
conf/qa_conf_virtteam/: qa_conf_virtteam.8  qa_conf_virtteam.changes  qa_conf_virtteam.spec
libs/qa_lib_config/: qa_lib_config.8  qa_lib_config.changes  qa_lib_config.spec
libs/qa_lib_ctcs2/: qa_lib_ctcs2.8  qa_lib_ctcs2.changes  qa_lib_ctcs2.spec
libs/qa_lib_frontenduser/: qa_lib_frontenduser.8  qa_lib_frontenduser.changes  qa_lib_frontenduser.spec
libs/qa_lib_internalapi/: PACK_CLEANUP  PACK_PREPARE  ifconfig2ip.8  qa_lib_internalapi.8  qa_lib_internalapi.changes  qa_lib_internalapi.spec
libs/qa_lib_internalapi/qa_lib_internalapi/: API  AUTHORS  ChangeLog  Implementation_notes  Makefile.am  Makefile.in  Makefile_oldstatic  NEWS  README  config.h.in  configure  configure.in  doxygen.config
libs/qa_lib_internalapi/qa_lib_internalapi/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libs/qa_lib_internalapi/qa_lib_internalapi/src/: Makefile.am  Makefile.in  cleanup.c  cleanup.h  compare.c  config.c  demo_use.c  error.c  error.h  execute.c  execute.h  file.c  file.h  global.h  handlemanager.c  handlemanager.h  libqainternal.c  libqainternal.h  log.c  md5.c  md5.h  service.c  service.h  user.c  user.h  version.c
libs/qa_lib_keys/: qa_lib_keys.8  qa_lib_keys.changes  qa_lib_keys.spec
libs/qa_lib_openid/: qa_lib_openid.8  qa_lib_openid.spec
libs/qa_lib_perl/: qa_lib_perl.8  qa_lib_perl.changes  qa_lib_perl.spec
libs/qa_lib_strongwind/: accessibles.patch  config.patch  opsqa.patch  qa_lib_strongwind.8  qa_lib_strongwind.changes  qa_lib_strongwind.spec  strongwind-1.0.tar.bz2
libs/qa_lib_tblib/: qa_lib_tblib.8  qa_lib_tblib.changes  (+1 more)
tests/: 98_delete_virtenv  README.md  hamsta_titles_should_be_correct.robot  hamsta_valid_login_should_work.robot  run-tests  run-tests.sh  run-virt-tests  web-resources.txt
(+1337 files in other folders)
